# haproxy-redis-sentinel

./: .gitignore  Containerfile  README.md  artifacthub-repo.yml  compose.yaml  devenv.nix  entrypoint.sh  haproxy.cfg  index.yaml  pyproject.toml
.github/workflows/: changelog.yaml  chart.yaml  image.yaml
charts/haproxy-redis-sentinel/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/haproxy-redis-sentinel/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  servicemonitor.yaml
haproxy_redis_sentinel/: cli.py  handler.py  logger.py  utils.py
